# ours.studio

./: .gitignore  Cargo.toml  README.md  bun.lockb  package.json  prettier.config.mjs  rustfmt.toml  tailwind.config.ts
.cargo/: config.toml
src/: main.rs
templates/: base.html.jinja  index.html.jinja
